--- a/client/src/components/SearchBtn/SearchBtn.css
+++ b/client/src/components/SearchBtn/SearchBtn.css
@@ -1,4 +1,18 @@
 .search-btn {
-  float: right;
-  color: #08a537;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.search-btn:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
 }
