changed main layout and added styles

--- a/client/src/components/CreateGroupBtn/CreateGroupBtn.css
+++ b/client/src/components/CreateGroupBtn/CreateGroupBtn.css
@@ -1,6 +1,6 @@
 .group-btn {
   border-radius: 4px;
-  background-color: #f4511e;
+  background-color: #aed3e0;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -13,6 +13,6 @@
 }
 
 .group-btn:hover {
-  background-color: #4CAF50; /* Green */
+  background-color: #f09731; /* Green */
   color: white;
 }
