--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,5 +1,10 @@
-#modal {
-    background-color: #08a537;
-    border: 2px;
+#settings-btn{
+    background-color:#161616;
+    border: none;
+    color:#afafaf;
+   
   }
   
+  #settings-btn:hover { 
+    color:#ffffff;
+}
