edited my groups

--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -2,6 +2,8 @@
     background-color:#161616;
     border: none;
     color:#afafaf;
+    font-family:"bignoodletoo";
+    letter-spacing: 2px;
    
   }
   
