--- a/client/src/components/CreateGroupBtn/CreateGroupBtn.css
+++ b/client/src/components/CreateGroupBtn/CreateGroupBtn.css
@@ -9,10 +9,12 @@
   width: 200px;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
+  font-family:"bignoodletoo";
+  letter-spacing: 2px;
+  margin-top:50px;
 }
 
 .group-btn:hover {
-  background-color: #f09731; /* Green */
-  color: white;
+  background-color: rgb(44, 43, 43); 
+  color: #f09731;
 }
