--- a/client/src/components/CurrentGroups/CurrentGroups.css
+++ b/client/src/components/CurrentGroups/CurrentGroups.css
@@ -8,9 +8,26 @@
     cursor: pointer;
     margin: 5px;
     height:50px;
+    font-family:"bignoodletoo";
+    letter-spacing: 2px;
+    font-size:30px;
   }
   
   .manage-groups-btn:hover {
-    background-color: #f09731; 
-    color: white;
+    background-color: rgb(44, 43, 43);; 
+    color: #f09731;
   }
+
+  .list-group-item{
+    font-family:"bignoodletoo";
+    letter-spacing: 2px;
+  }
+
+  #group-name{
+    color:#f09731;
+    font-size:20px;
+  }
+.card{
+  border: 1px solid rgb(155, 154, 154);
+  margin-top:5%;
+}
