--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,19 +1,29 @@
-.navbar {
+ .navbar {
     width: 100%;
-    border: 2px solid;
+    border: .5px solid;
     background-color:#161616;
     color: #161616;
-   
+    height:30px;
+    
  } 
 
- /* @font-face { font-family: bignoodletoo; src: url('../bignoodletoo1.TTF'); }  */
- a{
+ @font-face { font-family: bignoodletoo; src: url('../../bignoodletoo1.ttf'); } 
+ .nav-item a{
      color:#afafaf;
-     /* font-family: bignoodletoo */
-    
+     display: block;
+     width: 60px;
+     margin-top:12px;
+     margin-lefT:30px;
+     font-family:"bignoodletoo";
+     letter-spacing: 2px;
+     
  }
 
- 
+ .nav-item3{
+    margin-bottom:5px;
+    margin-left:20px;
+ }
+
 
  a:hover { 
     color:#ffffff;
@@ -21,12 +31,14 @@
 
 #lfg{
     color:#3d92cf;
+    font-family:"bignoodletoo";
+     letter-spacing: 2px;
+     font-size:25px;
 }
 
 #lfg:hover { 
     color:#ffffff;
-}
+}  
 
 
- 
      
