--- a/client/src/components/SearchBtn/SearchBtn.css
+++ b/client/src/components/SearchBtn/SearchBtn.css
@@ -10,9 +10,11 @@
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
+  font-family:"bignoodletoo";
+  letter-spacing: 2px;
 }
 
 .search-btn:hover {
-  background-color: #f09731; /* Green */
-  color: white;
+  background-color: rgb(44, 43, 43); /* Green */
+  color: #f09731;
 }
