--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -16,12 +16,19 @@
      margin-lefT:30px;
      font-family:"bignoodletoo";
      letter-spacing: 2px;
-     
+     /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; 
+     font-size: 14px; 
+     font-style: normal; 
+     font-variant: normal; 
+     font-weight: 700; 
+     line-height: 15.4px;     */
  }
 
  .nav-item3{
     margin-bottom:5px;
-    margin-left:20px;
+   margin-left:20px;
+
+   
  }
 
 
@@ -34,6 +41,7 @@
     font-family:"bignoodletoo";
      letter-spacing: 2px;
      font-size:25px;
+     margin-left:10px;
 }
 
 #lfg:hover { 
