--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,8 +1,9 @@
 h1 {
     color:rgb(34, 34, 34);
-    font-family:"bignoodletoo";
+    font-family:"bignoodletoo"; 
     letter-spacing: 2px;
    text-align:center;
+   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
 
   .mygroups{
