--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,5 +1,5 @@
 #settings-btn{
-    background-color:#161616;
+    background-color:rgb(24, 23, 23, 0.2);
     border: none;
     color:#afafaf;
     font-family:"bignoodletoo";
