--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -1,17 +1,24 @@
-.search-bar {
-  height: 60px;
+.container {
+ width:100%;
 }
 
-body {
-	padding-top: 30px;
+.submit-button{
+	background-color: #aed3e0;
+	font-family:"bignoodletoo";
+	letter-spacing: 2px;
+	color: #FFFFFF;
+	font-size: 20px;
+  padding:10px;
+	width: 20%;
+	border-radius: 4px;
 }
-.product {
-	margin-bottom: 30px;
+
+.submit-button:hover {
+  background-color: rgb(44, 43, 43); 
+  color: #f09731;
 }
-.product-inner {
-	box-shadow: 0 0 10px rgba(0,0,0,.2);
-	padding: 10px;
-}
-.product img {
-	margin-bottom: 10px;
+
+.form-group{
+	font-family:"bignoodletoo";
+	letter-spacing: 2px;
 }
