--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,28 +1,51 @@
 h1 {
-    color:rgb(34, 34, 34);
+    color:rgb(255, 255, 255);
     font-family:"bignoodletoo"; 
     letter-spacing: 2px;
-   text-align:center;
+    text-align:center;
+    font-size:80px;
    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
 
-  .mygroups{
-    margin-top:2%;
+  h2 {
+    color:rgb(228, 226, 226);
+    font-family:"bignoodletoo"; 
+    letter-spacing: 2px;
+    text-align:center;
+    font-size:50px;
+   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
 
-  .creategroupSearch{
-      background-color:blue;
-      width:100%;
+  h3{
+    text-align:center;
+    color:rgb(196, 196, 196);
+     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
   }
 
-  .buttons{
-      padding:20px;
+  
+  .button1, .button2{
+      padding:10px;
       margin:auto;
       width:50%;
-      margin-top:20%;
+    
   }
 
+.button1{
+    margin-top: 60px;
+}
+
+  .button2{
+    margin-top:95px;
+  }
+
+
   body{
-      background-color:rgb(223, 219, 219);
+    background-image: url("../../images/background2.jpg");
   }
   
+.mygroups{
+    margin-bottom:300px;
+    margin-top:100px;
+   
+}
+
