added styling to register form page

--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -10,3 +10,16 @@
   #settings-btn:hover { 
     color:#ffffff;
 }
+
+/* h6{
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  color:black;
+  font-size:20px;
+  letter-spacing: 0px;
+}
+
+.form-group{
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  color:black;
+  font-size:20px;
+} */
