got first search term working

--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,9 +1,10 @@
 h1 {
-    color:rgb(255, 255, 255);
+   
     font-family:"bignoodletoo"; 
     letter-spacing: 2px;
     text-align:center;
     font-size:80px;
+    color:white;
     
    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
