--- a/client/src/pages/UpdateGroup/UpdateGroup.css
+++ b/client/src/pages/UpdateGroup/UpdateGroup.css
@@ -1,29 +1,43 @@
 h1 {
-    color:rgb(34, 34, 34);
-    font-family:"bignoodletoo"; 
-    letter-spacing: 2px;
-   text-align:center;
-   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
-  }
+  color: rgb(34, 34, 34);
+  font-family: "bignoodletoo";
+  letter-spacing: 2px;
+  text-align: center;
+  /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+}
 
-  .mygroups{
-    margin-top:2%;
-  }
+.mygroups {
+  margin-top: 2%;
+}
 
-  .creategroupSearch{
-      background-color:blue;
-      width:100%;
-  }
+.creategroupSearch {
+  background-color: blue;
+  width: 100%;
+}
 
-  .buttons{
-      padding:20px;
-      margin:auto;
-      width:50%;
-      margin-top:20%;
-  }
+.buttons {
+  padding: 20px;
+  margin: auto;
+  width: 50%;
+  margin-top: 20%;
+}
 
-  body{
-      background-color:rgb(223, 219, 219);
-      padding-bottom: 150px;
-  }
-  
+body {
+  background-color: rgb(223, 219, 219);
+  padding-bottom: 150px;
+}
+
+.card {
+  border: 1px solid rgb(155, 154, 154);
+  margin-top: 5%;
+}
+
+.list-group-item {
+  font-family: "bignoodletoo";
+  letter-spacing: 2px;
+}
+
+#group-name {
+  color: #f09731;
+  font-size: 20px;
+}
