update using manage player modal, updates but rank not working at the moment

--- a/client/src/components/Players/Players.css
+++ b/client/src/components/Players/Players.css
@@ -27,7 +27,7 @@
 
   #player-name{
     text-align: center;
-    color:#f09731;
+    /* color:#f09731; */
     font-size:40px;
     font-family:"bignoodletoo";
     letter-spacing: 2px;
