--- a/client/src/components/CreateGroupBtn/CreateGroupBtn.css
+++ b/client/src/components/CreateGroupBtn/CreateGroupBtn.css
@@ -18,3 +18,31 @@
   background-color: rgb(44, 43, 43); 
   color: #f09731;
 }
+
+@media only screen and (max-width: 425px) {
+  .group-btn {
+    border-radius: 4px;
+    background-color: #aed3e0;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 25px;
+    padding: 15px;
+    width: 220px;
+    transition: all 0.5s;
+    cursor: pointer;
+    font-family:"bignoodletoo";
+    letter-spacing: 2px;
+    margin-top:40px;
+    margin:0 auto;
+    display:block;
+    margin-top:50px;
+ 
+  }
+  
+  .group-btn:hover {
+    background-color: rgb(44, 43, 43); 
+    color: #f09731;
+  }
+  
+}
