--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,7 +1,7 @@
 #settings-btn{
     background-color:rgb(24, 23, 23, 0.2);
     border: none;
-    color:#afafaf;
+    color:#d4d3d3;
     font-family:"bignoodletoo";
     letter-spacing: 2px;
    
@@ -10,6 +10,7 @@
   #settings-btn:hover { 
     color:#ffffff;
 }
+
 
 /* h6{
   font-family: Futura, "Trebuchet MS", Arial, sans-serif;
