--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,12 +1,16 @@
-#login {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: rgba(51,51,51,0.7);
-  z-index: 10;
-  background-image: url("../../images/background-image.jpg");
-  background-color: black;
-  }
+
   
+#login-form{
+  border: .5px solid;
+  width:50%;
+  background-color:rgba(53, 52, 52, 0.349);
+  margin-top:20px;
+  margin:auto;
+}
+
+#login-text{
+    
+  color:rgb(196, 196, 196);
+  font-family: 'Archivo', sans-serif;
+  font-size: 20px;
+}
