--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,10 +1,12 @@
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+
 h1 {
-   
     font-family:"bignoodletoo"; 
     letter-spacing: 2px;
     text-align:center;
     font-size:80px;
-    color:white;
+    
     
    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
@@ -14,8 +16,7 @@ h1 {
     font-family:"bignoodletoo"; 
     letter-spacing: 2px;
     text-align:center;
-  
-    font-size:50px;
+    font-size:30px;
 
    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
@@ -48,6 +49,8 @@ h1 {
   body{
 
     background-image: url("../../images/background2.jpg");
+   
+  
 
      
   }
@@ -57,4 +60,59 @@ h1 {
     margin-top:100px;
    
 }
+}
 
+@media only screen and (max-width: 425px) {
+    /* For mobile phones: */
+
+    h1 {
+        font-family:"bignoodletoo"; 
+        letter-spacing: 2px;
+        text-align:center;
+        font-size:60px;
+        /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+      }
+    
+      h2 {
+        color:rgb(228, 226, 226);
+        font-family:"bignoodletoo"; 
+        letter-spacing: 2px;
+        text-align:center;
+        font-size:15px;
+    
+       /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+      }
+    
+      h3{
+        text-align:center;
+        color:rgb(196, 196, 196);
+         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+        font-size:15px;
+      }
+    
+    
+      
+      .button1, .button2{     
+          margin:auto;       
+      }
+    
+    .button1{
+        margin-top: 10px;
+        margin-left:4px;
+    }
+    
+      .button2{
+        margin-top:10px;
+      }
+    
+    
+      body{   
+        background-image: url("../../images/background2.jpg");    
+      }
+      
+    .mygroups{
+        margin-bottom:300px;
+        margin-top:100px;      
+    }
+    
+}
