--- a/client/src/pages/NewGroup/NewGroup.css
+++ b/client/src/pages/NewGroup/NewGroup.css
@@ -1,3 +1,11 @@
 #footer-space{
     height:150px;
 }
+
+@media only screen and (max-width: 425px) {
+h1{
+    font-size:30px;
+    margin-bottom: 30px;
+}
+
+}
