--- a/client/src/pages/Search/Search.css
+++ b/client/src/pages/Search/Search.css
@@ -1,6 +1,5 @@
 #search-results {
     border: 2px;
-
     padding-bottom:150px;
     width:60%;
     margin:auto;
@@ -28,4 +27,36 @@
   }
 
 
+  
+  @media only screen and (max-width: 425px) {
+    #search-results {
+      border: 2px;
+      padding-bottom:150px;
+      width:60%;
+      margin:auto;
+    }
+  
+    #search-groups{
+      width:100%;
+      margin:auto;
+    }
+    
+    h4{
+      color:rgb(250, 246, 246);
+      font-family:"bignoodletoo"; 
+      letter-spacing: 2px;
+      text-align:center;
+      font-size:30px;
+      margin-bottom:50px;
+
+      margin-top:30px;
+    }
+  
+    h5{
+      font-size:50px;
+      color:rgb(250, 246, 246);
+      text-align:center;
+      margin-bottom:30px;
+    }
+  }
   
