--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -4,6 +4,8 @@
     color:#d4d3d3;
     font-family:"bignoodletoo";
     letter-spacing: 2px;
+    margin-top:12px;
+    margin-left:2px;
    
   }
   
@@ -11,16 +13,3 @@
     color:#ffffff;
 }
 
-
-/* h6{
-  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-  color:black;
-  font-size:20px;
-  letter-spacing: 0px;
-}
-
-.form-group{
-  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-  color:black;
-  font-size:20px;
-} */
