--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -6,6 +6,7 @@ h1 {
     letter-spacing: 2px;
     text-align:center;
     font-size:80px;
+    margin-top:100px;
     
     
    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
@@ -70,6 +71,7 @@ h1 {
         letter-spacing: 2px;
         text-align:center;
         font-size:60px;
+        margin-top:50px;
         /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
       }
     
