--- a/client/src/pages/Search/Search.css
+++ b/client/src/pages/Search/Search.css
@@ -1,33 +1,37 @@
 #search-results {
     border: 2px;
     padding-bottom:150px;
-    width:60%;
-    margin:auto;
+   text-align:center;
   }
 
   #search-groups{
-    width:60%;
-    margin:auto;
+    width:100%;
+    margin:0 auto;
+    
   }
   
   h4{
     color:rgb(250, 246, 246);
     font-family:"bignoodletoo"; 
     letter-spacing: 2px;
-    text-align:center;
+    margin:auto;
     font-size:50px;
     margin-bottom:50px;
+    margin-top:100px;
   }
 
   h5{
     font-size:80px;
     color:rgb(250, 246, 246);
-    text-align:center;
     margin-bottom:30px;
   }
 
+  #text-test{
+    text-align: center;
+  }
 
-  
+
+
   @media only screen and (max-width: 425px) {
     #search-results {
       border: 2px;
@@ -48,8 +52,8 @@
       text-align:center;
       font-size:30px;
       margin-bottom:50px;
-
-      margin-top:30px;
+    margin-top:60px;
+      
     }
   
     h5{
