--- a/client/src/components/CurrentGroups/CurrentGroups.css
+++ b/client/src/components/CurrentGroups/CurrentGroups.css
@@ -7,11 +7,13 @@
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
+  width:100%;
   height: 50px;
   font-family: "bignoodletoo";
   letter-spacing: 2px;
   font-size: 30px;
 }
+
 
 .manage-groups-btn:hover {
   background-color: rgb(44, 43, 43);
