--- a/client/src/components/Players/Players.css
+++ b/client/src/components/Players/Players.css
@@ -1,23 +1,29 @@
 .manage-groups-btn {
-  border-radius: 4px;
-  background-color: #aed3e0;
-  border: none;
-  color: #ffffff;
-  text-align: center;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
-  height: 50px;
-  font-family: "bignoodletoo";
-  letter-spacing: 2px;
-  font-size: 30px;
-}
+    border-radius: 4px;
+    background-color: #aed3e0;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    height:50px;
+    font-family:"bignoodletoo";
+    letter-spacing: 2px;
+    font-size:30px;
+  }
+  
+  .manage-groups-btn:hover {
+    background-color: rgb(44, 43, 43);; 
+    color: #f09731;
+  }
 
-.manage-groups-btn:hover {
-  background-color: rgb(44, 43, 43);
-  color: #f09731;
-}
-
+  .player-item{
+    font-family:"bignoodletoo";
+    text-align: center;
+    font-size:40px;
+    letter-spacing: 2px;
+  }
 
   #player-name{
     text-align: center;
@@ -27,29 +33,6 @@
     letter-spacing: 2px;
   }
 
-.player-item {
-  font-family: "bignoodletoo";
-  text-align: center;
-  font-size: 40px;
-  letter-spacing: 2px;
-}
-
-
-#player-name {
-  text-align: center;
-  color: #f09731;
-  font-size: 40px;
-  font-family: "bignoodletoo";
-  letter-spacing: 2px;
-}
-
-.card {
+.card{
   border: 1px solid rgb(155, 154, 154);
-}
-
-textarea {
-  border-style: none;
-  border-color: Transparent;
-  overflow: auto;
-  outline: none;
 }
