--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,11 +1,32 @@
+html, body {
+    margin:0;
+    padding:0;
+    height:100%;
+ }
+ #container {
+    min-height:100%;
+    position:relative;
+ }
+ #header {
+    background:#ff0;
+    padding:10px;
+ }
+ #body {
+    padding:10px;
+    padding-bottom:60px;   /* Height of the footer */
+ }
+
 #Footer{
     background-color:rgb(24, 23, 23, 0.2);
     text-align:center;
-    
     color:rgb(185, 182, 182); 
+    
+
+    position:absolute;
    
-    margin-bottom: -100;
-    width: 100%;
+   width:100%;
+   height:60px;   /* Height of the footer */
+  
 }
 
 a{
