--- a/client/src/components/DeleteBtn/DeleteBtn.css
+++ b/client/src/components/DeleteBtn/DeleteBtn.css
@@ -1,10 +1,17 @@
 .delete-btn {
   float: right;
   color: #e74944;
-  font-size:40px;
+  background-color:rgb(236, 232, 232);
+  font-size:20px;
   font-family:"bignoodletoo";
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
+  border-radius: 4px;
+  border: none;
+  padding: 5px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  margin:10px;
 }
 
 .delete-btn:hover {
