--- a/client/src/components/UpdatePlayerBtn/UpdatePlayerBtn.css
+++ b/client/src/components/UpdatePlayerBtn/UpdatePlayerBtn.css
@@ -1,7 +1,31 @@
 .update-btn {
-  float: left;
+  float: right;
   color: #e74944;
-  color:#f09731;
-  font-size:40px;
+  background-color:rgb(236, 232, 232);
+  font-size:20px;
   font-family:"bignoodletoo";
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  border-radius: 4px;
+  border: none;
+  padding: 5px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  margin:10px;
 }
+
+.update-btn:hover {
+  color: #f09731;
+  background-color: rgb(44, 43, 43);
+}
+
+.update-btn:active { 
+  background-color: #aed3e0;
+  color: #ffffff;
+}
+
+
+
+
+
+
