added dropdown for search and styles

--- a/client/src/components/CreateGroupBtn/CreateGroupBtn.css
+++ b/client/src/components/CreateGroupBtn/CreateGroupBtn.css
@@ -1,6 +1,6 @@
 .group-btn {
   border-radius: 4px;
-  background-color: #aed3e0;
+  background-color: #f09731;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -15,14 +15,14 @@
 }
 
 .group-btn:hover {
-  background-color: rgb(44, 43, 43); 
-  color: #f09731;
+  background-color: #eeba80; 
+  color: white;
 }
 
 @media only screen and (max-width: 425px) {
   .group-btn {
     border-radius: 4px;
-    background-color: #aed3e0;
+    background-color: #f09731;
     border: none;
     color: #FFFFFF;
     text-align: center;
