--- a/client/src/components/SearchBtn/SearchBtn.css
+++ b/client/src/components/SearchBtn/SearchBtn.css
@@ -1,6 +1,6 @@
 .search-btn {
   border-radius: 4px;
-  background-color: #aed3e0;
+  background-color: #f09731;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -15,8 +15,8 @@
 }
 
 .search-btn:hover {
-  background-color: rgb(44, 43, 43); /* Green */
-  color: #f09731;
+  background-color: #ebb87e; /* Green */
+  color: #ffffff;
 }
 
 @media only screen and (max-width: 425px) {
