--- a/client/src/components/ManageGroupModal/ManageGroupModal.css
+++ b/client/src/components/ManageGroupModal/ManageGroupModal.css
@@ -1,8 +1,8 @@
 #manage-groups-btn {
   border-radius: 4px;
-  background-color: #aed3e0;
+  background-color: #ffffffee;
   border: none;
-  color: #FFFFFF;
+  color: rgb(0, 0, 0);
   text-align: center;
   transition: all 0.5s;
   cursor: pointer;
@@ -14,6 +14,11 @@
 }
 
 #manage-groups-btn:hover {
-  background-color: rgb(44, 43, 43);; 
-  color: #f09731;
+  background-color: rgba(44, 43, 43, 0); 
+  color: rgb(255, 255, 255);
+}
+
+.modal{
+  /* background-image: url("../../images/background2.jpg"); */
+background-color: rgba(44, 43, 43, 0.315);
 }
