--- a/client/src/components/UpdatePlayerBtn/UpdatePlayerBtn.css
+++ b/client/src/components/UpdatePlayerBtn/UpdatePlayerBtn.css
@@ -1,17 +1,24 @@
-.update-btn {
-  float: right;
-  color: #e74944;
-  background-color:rgb(236, 232, 232);
+.updatep-btn {
+  float: right; 
+  /* color: #000000;
+  background-color:rgb(141, 231, 110);
   font-size:20px;
   font-family:"bignoodletoo";
-  -webkit-transition-duration: 0.4s; /* Safari */
+  -webkit-transition-duration: 0.4s; 
   transition-duration: 0.4s;
   border-radius: 4px;
   border: none;
   padding: 5px;
   letter-spacing: 1px;
   cursor: pointer;
+  margin:10px;  */
+  width:35%;
+  height:20px;
+  font-size:16px;
   margin:10px;
+ 
+  text-align:center;
+ color:orange;
 }
 
 .update-btn:hover {
