fixed left justified content

--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -56,12 +56,29 @@ h1 {
     background-color: #999;
     
   }
+
+  #overwatch-char{
+    background-image: url("../../images/sombra.png"); 
+    background-repeat:no-repeat;
+    height:500px;
+   
+  }
+
+  #overwatch-char2{
+    background-image: url("../../images/char6.png"); 
+    background-repeat:no-repeat;
+    height:500px;
+  
+  }
   
 .mygroups{
     margin-bottom:300px;
     margin-top:100px;
+margin-left:10%;
 
 }
+
+
 
 /* @media only screen and (max-width: 1024px) and (min-width: 426px)  {
     .mygroups{
