--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,19 +1,23 @@
 #settings-btn{
-    background-color:rgb(24, 23, 23, 0.2);
+    background-color:rgb(250, 142, 0);
     border: none;
-    color:#d4d3d3;
+    color:#ffffff;
     font-family:"bignoodletoo";
     letter-spacing: 2px;
     margin-top:10px;
-    margin-left:2px;
+    margin-left:5px;
     font-size: 20px;
-   
+    border-radius:2px;
+    margin-right:20px;
+  
   }
   
   #settings-btn:hover { 
     color:#ffffff;
+    background-color:rgb(252, 198, 98);
 }
 
 .pmodal-button2{
   color:black;
+  
 }
