--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -17,8 +17,35 @@
     background-color:rgb(252, 198, 98);
 }
 
-.pmodal-button2{
-  color:black;
-  
+.pmodal-button{
+  letter-spacing: 1px;
+border-radius:4px;
+width:80px;
+color:black;
+height:30px;
+
+}
+
+.pmodal-update-btn{
+
+letter-spacing: 1px;
+border-radius:4px;
+width:80px;
+color:black;
+height:30px;
+
+}
+
+.pmodal-logout{
+  letter-spacing: 0px;
+border-radius:4px;
+width:80px;
+color:rgb(48, 47, 47);
+height:30px;
+border: 1px solid rgb(156, 156, 156);
+font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+font-size:15px;
+text-align:center;
+float:left;
 }
 
