--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,8 +1,9 @@
 
+
   
 #login-form{
   border: .5px solid;
-  width:50%;
+  width:100%;
   background-color:rgba(53, 52, 52, 0.349);
   
   margin:auto;
@@ -70,4 +71,17 @@ letter-spacing: 0px;
 
 .submit-button1:hover{
   background-color: #7c4b19;
+}
+
+
+
+
+@media only screen and (min-width: 426px) {
+
+  #login-form{
+  
+    width:50%;
+    
+  }
+  
 }
