--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -17,17 +17,9 @@
     background-color:rgb(252, 198, 98);
 }
 
-.pmodal-button{
-  letter-spacing: 1px;
-border-radius:4px;
-width:80px;
-color:black;
-height:30px;
-
-}
 
 .pmodal-update-btn{
-
+  font-family:"bignoodletoo";
 letter-spacing: 1px;
 border-radius:4px;
 width:80px;
@@ -37,15 +29,25 @@ height:30px;
 }
 
 .pmodal-logout{
-  letter-spacing: 0px;
+letter-spacing: 0px;
 border-radius:4px;
 width:80px;
 color:rgb(48, 47, 47);
 height:30px;
 border: 1px solid rgb(156, 156, 156);
-font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+font-family:"bignoodletoo";
 font-size:15px;
 text-align:center;
-float:left;
+
+}
+
+
+.pmodal-close{
+letter-spacing: 0px;
+border-radius:4px;
+width:80px;
+color:black;
+height:30px;
+font-family:"bignoodletoo";
 }
 
