--- a/client/src/components/Players/Players.css
+++ b/client/src/components/Players/Players.css
@@ -18,17 +18,21 @@
     color: #f09731;
   } */
 
-  .player-item{
-    font-family:"bignoodletoo";
-    text-align: center;
-    font-size:40px;
-    letter-spacing: 2px;
-   margin-top:5%;
-  }
+.player-item {
+  font-family: "bignoodletoo";
+  text-align: center;
+  font-size: 40px;
+  letter-spacing: 2px;
+  margin-top: 5%;
+}
 
-  
-
-.card{
+.card {
   border: 1px solid rgb(155, 154, 154);
-  width:90%;;
+  width: 90%;
+}
+
+#player-gamertag {
+  text-align: center;
+  font-size: 40px;
+  letter-spacing: 2px;
 }
