fixed centering and styled

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -18,12 +18,12 @@ body {
   /* header */
   
   .header {
-    background-color:rgba(24, 23, 23, 0.7);
+    background-color:rgba(22, 22, 22, 0.486);
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
     position: fixed;
-    width: 100%;
+   width: 100%;
     z-index: 3;
-    
+    margin-left:-20px;
 
   }
   
