--- a/client/src/components/CreateGroupBtn/CreateGroupBtn.css
+++ b/client/src/components/CreateGroupBtn/CreateGroupBtn.css
@@ -12,6 +12,7 @@
   font-family:"bignoodletoo";
   letter-spacing: 2px;
   margin-top:40px;
+  margin-bottom:30px;
 }
 
 .group-btn:hover {
@@ -37,7 +38,7 @@
     margin:0 auto;
     display:block;
     margin-top:50px;
- 
+    margin-bottom:30px;
   }
   
   .group-btn:hover {
