--- a/client/src/pages/MyPage/MyPage.css
+++ b/client/src/pages/MyPage/MyPage.css
@@ -11,26 +11,13 @@ h1 {
    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
 
-  h2 {
-  
-    font-family:"bignoodletoo"; 
-    letter-spacing: 2px;
-    text-align:center;
-    font-size:30px;
-    
-   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
-  }
+
 
   h3{
     text-align:center;
     color:rgb(196, 196, 196);
      font-family: Futura, "Trebuchet MS", Arial, sans-serif;
     
-  }
-
-  #mainpage-content{
-      margin-top:200px;
-      margin-bottom:50px;
   }
 
 
@@ -40,7 +27,13 @@ h1 {
     
   }
 
+.button1{
+    margin-top: 60px;
+}
 
+  .button2{
+    margin-top:95px;
+  }
 
 
   body{
@@ -75,32 +68,35 @@ margin-left:10%;
 
 }
 
-#main-first{
-    height:60px;
-    background-color:rgb(233, 233, 233);
-    width:105%;
-  margin-left:-20px;
-margin-top:140px;
-}
-#main-second{
-    height:350px;
-    background-color:rgb(233, 233, 233);
-    width:105%;
-  margin-left:-20px;
-  color:rgb(48, 47, 47);
-  text-align:center;
-  font-size:50px;
-}
 
 
-#main-third{
-    height:300px;
-    background-color:rgba(105, 104, 104, 0.137);
-    width:105%;
-  margin-left:-20px;
-  margin-top:-10px;
-}
+/* @media only screen and (max-width: 1024px) and (min-width: 426px)  {
+    .mygroups{
+        margin-bottom:300px;
+        margin-top:100px;
+        margin-left:25%;
+        width:100%
+    }
 
+    h1 {
+        font-family:"bignoodletoo"; 
+        letter-spacing: 2px;
+        text-align:center;
+        font-size:80px;
+        margin-top:100px;
+        margin-left:50%;
+        width:100%;
+        
+      
+      }
+      h3{
+        text-align:center;
+        color:rgb(196, 196, 196);
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+        margin-left:50%;
+        width:100%;
+      }
+} */
 
 
 @media only screen and (max-width: 425px) {
