--- a/client/src/components/ManageGroupModal/ManageGroupModal.css
+++ b/client/src/components/ManageGroupModal/ManageGroupModal.css
@@ -11,6 +11,8 @@
   font-family:"bignoodletoo";
   letter-spacing: 2px;
   font-size:30px;
+  margin-left: 20px;
+  margin-right:-15px;
 }
 
 #manage-groups-btn:hover {
