--- a/client/src/pages/NewGroup/NewGroup.css
+++ b/client/src/pages/NewGroup/NewGroup.css
@@ -1,3 +1,13 @@
+
+.form-control {
+    height: 100%;
+    font-family: initial;
+    font-size: initial;
+    letter-spacing: initial;
+    text-align:initial;
+    font-size:initial;
+}
+
 #footer-space{
     height:150px;
 }
