--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,5 +1,4 @@
 
-
 h1 {
     font-family:"bignoodletoo"; 
     letter-spacing: 2px;
@@ -54,39 +53,26 @@ h1 {
     
   }
 
-  #overwatch-char{
-    background-image: url("../../images/sombra.png"); 
-    background-repeat:no-repeat;
-    height:500px;
-   
-  }
-
-  #overwatch-char2{
-    background-image: url("../../images/char6.png"); 
-    background-repeat:no-repeat;
-    height:500px;
-  
-  }
-  
+ 
 .mygroups{
     margin-bottom:200px;
-    
-margin-left:10%;
+    margin-left:10%;
 
 }
 
 #main-first{
     height:60px;
-    background-color:rgb(233, 233, 233);
-    width:105%;
-  margin-left:-20px;
-margin-top:140px;
+    background-color:rgb(233, 233, 233);  
+    margin-top:140px;
+   
+
+    
 }
 #main-second{
-    height:350px;
-    background-color:rgb(233, 233, 233);
-    width:105%;
-  margin-left:-20px;
+  height:350px;
+  background-color:rgb(233, 233, 233);
+  width:100%;
+  
   color:rgb(48, 47, 47);
   text-align:center;
   font-size:50px;
@@ -94,12 +80,35 @@ margin-top:140px;
 
 
 #main-third{
-    height:300px;
+    height:360px;
     background-color:rgba(105, 104, 104, 0.137);
-    width:105%;
-  margin-left:-20px;
-  margin-top:-10px;
+    width:100%;
+  margin-top:0px;
+  margin-bottom:200px;
 }
+
+
+#overwatch-char{
+    background-image: url("../../images/sombra.png"); 
+    background-repeat:no-repeat;
+   margin:auto;
+   margin-top:40px;
+ 
+  }
+
+  #about-us{
+      color:white;
+      text-align:center;
+      padding-top:80px;
+      font-size:50px;
+      letter-spacing: 2px;
+  }
+
+
+      
+
+  
+
 
 
 
@@ -132,12 +141,14 @@ margin-top:140px;
         font-size:15px;
       }
     
-    
+      h5{
+        font-size:5px;
+        color: blue;
+      }
       
       .button1, .button2{     
           margin:auto;       
       }
-    
     
     
     
@@ -150,4 +161,14 @@ margin-top:140px;
         margin-top:100px;      
     }
     
+
+
+
+  #about-us{
+    text-align:center;
+    padding-top:80px;
+    font-size:50px;
+    letter-spacing: 2px;
+}
+
 }
