--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -70,15 +70,17 @@ h1 {
 }
 #main-second{
   height:350px;
-  background-color:rgb(233, 233, 233);
+  background-color:rgb(31, 30, 30);
   width:100%;
   
-  color:rgb(48, 47, 47);
+  color:rgb(219, 216, 216);
   text-align:center;
   font-size:50px;
 }
 
-
+.main-groups{
+    color:black;
+}
 #main-third{
     height:360px;
     background-color:rgba(105, 104, 104, 0.137);
