--- a/client/src/components/CurrentGroups/CurrentGroups.css
+++ b/client/src/components/CurrentGroups/CurrentGroups.css
@@ -39,3 +39,9 @@ h5{
   color: blue;
 }
 
+#messages-btn {
+  font-family:"bignoodletoo";
+  font-size:30px;
+  letter-spacing: 2px;
+  height:50px;
+}
