--- a/client/src/pages/Main/main.css
+++ b/client/src/pages/Main/main.css
@@ -1,153 +1,129 @@
-
-
 h1 {
-    font-family:"bignoodletoo"; 
+  font-family: "bignoodletoo";
+  letter-spacing: 2px;
+  text-align: center;
+  font-size: 80px;
+  margin-top: 100px;
+
+  /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+}
+
+h2 {
+  font-family: "bignoodletoo";
+  letter-spacing: 2px;
+  text-align: center;
+  font-size: 30px;
+
+  /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+}
+
+h3 {
+  text-align: center;
+  color: rgb(196, 196, 196);
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+}
+
+#mainpage-content {
+  margin-top: 200px;
+  margin-bottom: 50px;
+}
+
+.button1,
+.button2 {
+  margin: auto;
+}
+
+body {
+  background-image: url("../../images/background2.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #999;
+}
+
+#overwatch-char {
+  background-image: url("../../images/sombra.png");
+  background-repeat: no-repeat;
+  height: 500px;
+}
+
+#overwatch-char2 {
+  background-image: url("../../images/char6.png");
+  background-repeat: no-repeat;
+  height: 500px;
+}
+
+.mygroups {
+  margin-bottom: 200px;
+  margin-left: 0 !important;
+}
+
+#main-first {
+  height: 60px;
+  background-color: rgb(233, 233, 233);
+  width: 105%;
+  margin-left: -20px;
+  margin-top: 140px;
+}
+#main-second {
+  height: 350px;
+  background-color: rgb(233, 233, 233);
+  width: 105%;
+  margin-left: -20px;
+  color: rgb(48, 47, 47);
+  text-align: center;
+  font-size: 50px;
+}
+
+#main-third {
+  height: 300px;
+  background-color: rgba(105, 104, 104, 0.137);
+  width: 105%;
+  margin-left: -20px;
+  margin-top: -10px;
+}
+
+@media only screen and (max-width: 425px) {
+  /* For mobile phones: */
+
+  h1 {
+    font-family: "bignoodletoo";
     letter-spacing: 2px;
-    text-align:center;
-    font-size:80px;
-    margin-top:100px;
-    
-    
-   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+    text-align: center;
+    font-size: 60px;
+    margin-top: 50px;
+    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
 
   h2 {
-  
-    font-family:"bignoodletoo"; 
+    color: rgb(199, 199, 199);
+    font-family: "bignoodletoo";
     letter-spacing: 2px;
-    text-align:center;
-    font-size:30px;
-    
-   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+    text-align: center;
+    font-size: 15px;
+
+    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
   }
 
-  h3{
-    text-align:center;
-    color:rgb(196, 196, 196);
-     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-    
+  h3 {
+    text-align: center;
+    color: rgb(196, 196, 196);
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-size: 15px;
   }
 
-  #mainpage-content{
-      margin-top:200px;
-      margin-bottom:50px;
+  .button1,
+  .button2 {
+    margin: auto;
   }
 
-
-  
-  .button1, .button2{
-    margin:auto;
-    
-  }
-
-
-
-
-  body{
-
+  body {
     background-image: url("../../images/background2.jpg");
-    background-position: center center;
-    background-repeat:  no-repeat;
-    background-attachment: fixed;
-    background-size:  cover;
-    background-color: #999;
-    
   }
 
-  #overwatch-char{
-    background-image: url("../../images/sombra.png"); 
-    background-repeat:no-repeat;
-    height:500px;
-   
+  .mygroups {
+    margin-bottom: 300px;
+    margin-top: 100px;
   }
-
-  #overwatch-char2{
-    background-image: url("../../images/char6.png"); 
-    background-repeat:no-repeat;
-    height:500px;
-  
-  }
-  
-.mygroups{
-    margin-bottom:200px;
-    
-margin-left:10%;
-
-}
-
-#main-first{
-    height:60px;
-    background-color:rgb(233, 233, 233);
-    width:105%;
-  margin-left:-20px;
-margin-top:140px;
-}
-#main-second{
-    height:350px;
-    background-color:rgb(233, 233, 233);
-    width:105%;
-  margin-left:-20px;
-  color:rgb(48, 47, 47);
-  text-align:center;
-  font-size:50px;
-}
-
-
-#main-third{
-    height:300px;
-    background-color:rgba(105, 104, 104, 0.137);
-    width:105%;
-  margin-left:-20px;
-  margin-top:-10px;
-}
-
-
-
-@media only screen and (max-width: 425px) {
-    /* For mobile phones: */
-
-    h1 {
-        font-family:"bignoodletoo"; 
-        letter-spacing: 2px;
-        text-align:center;
-        font-size:60px;
-        margin-top:50px;
-        /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
-      }
-    
-      h2 {
-        color:rgb(199, 199, 199);
-        font-family:"bignoodletoo"; 
-        letter-spacing: 2px;
-        text-align:center;
-        font-size:15px;
-      
-       /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
-      }
-    
-      h3{
-        text-align:center;
-        color:rgb(196, 196, 196);
-         font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        font-size:15px;
-      }
-    
-    
-      
-      .button1, .button2{     
-          margin:auto;       
-      }
-    
-    
-    
-    
-      body{   
-        background-image: url("../../images/background2.jpg");    
-      }
-      
-    .mygroups{
-        margin-bottom:300px;
-        margin-top:100px;      
-    }
-    
 }
