main page styles

--- a/client/src/components/RecentGroups/RecentGroups.css
+++ b/client/src/components/RecentGroups/RecentGroups.css
@@ -3,29 +3,33 @@ width:30%;
 background-color:rgba(207, 207, 241, 0.233);
 float:left;
 margin-left:35px;
-border: 1px solid rgb(155, 154, 154);
+border: 1px solid rgb(255, 255, 255);
 border-radius:4px;
 }
 
-
-
-.list-group-item1{
+.list-group-item-a{
   font-family:"bignoodletoo";
   letter-spacing: 2px;
-  background-color:rgba(44, 43, 43, 0);
-  color:rgb(29, 29, 29);
+  border: 0px solid rgb(255, 255, 255);
+  background-color:rgb(255, 255, 255);
   font-size:20px;
   padding-top:10px;
   list-style: none;
 }
 
-
-.card{
-border: 1px solid rgb(155, 154, 154);
-margin-top:5%;
-background-color:rgba(44, 43, 43, 0.233);
-
+.list-group-item1{
+  font-family:"bignoodletoo";
+  letter-spacing: 2px;
+ text-align:left;
+  color:rgb(255, 255, 255);
+  font-size:20px;
+  padding-top:10px;
+  list-style: none;
+  margin-left:10px;
 }
+
+
+
 
 @media only screen and (max-width: 1150px) {
   
@@ -34,7 +38,7 @@ background-color:rgba(44, 43, 43, 0.233);
     background-color:rgba(207, 207, 241, 0.233);
     float:left;
     margin-left:6%;
-    border: 1px solid rgb(155, 154, 154);
+    border: 1px solid rgb(255, 255, 255);
     border-radius:4px;
     }
 
@@ -44,11 +48,13 @@ background-color:rgba(44, 43, 43, 0.233);
 @media only screen and (max-width: 747px) {
   
   .recent-results{
-  width:100%;
+  width:90%;
   background-color:rgba(207, 207, 241, 0.233);
   margin:auto;
-  border: 1px solid rgb(155, 154, 154);
+  border: 1px solid rgb(255, 255, 255);
   border-radius:4px;
+  margin-left:5%;
+  margin-bottom:10px;
   }
 
 
