--- a/client/src/pages/MyPage/MyPage.css
+++ b/client/src/pages/MyPage/MyPage.css
@@ -20,20 +20,9 @@ h1 {
     
   }
 
-
   
-  .button1, .button2{
-    margin:auto;
-    
-  }
 
-.button1{
-    margin-top: 60px;
-}
 
-  .button2{
-    margin-top:95px;
-  }
 
 
   body{
@@ -47,67 +36,89 @@ h1 {
     
   }
 
-  #overwatch-char{
-    background-image: url("../../images/sombra.png"); 
+  #groups-image{
+    background-image: url("../../images/group.png"); 
+    background-position: center center;
     background-repeat:no-repeat;
-    height:500px;
-   
+   background-size: contain;
+   height: 300px;
+
   }
 
-  #overwatch-char2{
-    background-image: url("../../images/char6.png"); 
-    background-repeat:no-repeat;
-    height:500px;
   
-  }
   
 .mygroups{
     margin-bottom:200px;
-    
-margin-left:10%;
-
 }
 
 
 
-/* @media only screen and (max-width: 1024px) and (min-width: 426px)  {
-    .mygroups{
-        margin-bottom:300px;
-        margin-top:100px;
-        margin-left:25%;
-        width:100%
+@media only screen and (max-width: 1024px)  {
+
+  #groups-image{
+    background-image: url("../../images/group.png"); 
+    background-repeat:no-repeat;
+   background-size: contain;
+   height: 200px;
+ margin-left:6%;
+  }
+
+  h1 {
+    font-family:"bignoodletoo"; 
+    letter-spacing: 2px;
+    text-align:center;
+    font-size:60px;
+    margin-top:150px;
+    /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+  }
+
+  h2 {
+    color:rgb(199, 199, 199);
+    font-family:"bignoodletoo"; 
+    letter-spacing: 2px;
+    text-align:center;
+    font-size:15px;
+  
+   /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
+  }
+
+  h3{
+    text-align:center;
+    color:rgb(196, 196, 196);
+     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-size:15px;
+  }
+
+ 
+
+  body{   
+    background-image: url("../../images/background2.jpg");    
+  }
+  
+.mygroups{
+    margin-bottom:300px;
+    margin-top:100px;      
+}
+}
+
+
+@media only screen and (max-width: 425px) {
+    /* For mobile phones: */
+
+    #groups-image{
+      background-image: url("../../images/group.png"); 
+      background-repeat:no-repeat;
+     background-size: contain;
+     height: 120px;
+   margin-left:6%;
     }
 
     h1 {
         font-family:"bignoodletoo"; 
         letter-spacing: 2px;
         text-align:center;
-        font-size:80px;
-        margin-top:100px;
-        margin-left:50%;
-        width:100%;
-        
-      
-      }
-      h3{
-        text-align:center;
-        color:rgb(196, 196, 196);
-        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
-        margin-left:50%;
-        width:100%;
-      }
-} */
-
-
-@media only screen and (max-width: 425px) {
-    /* For mobile phones: */
-
-    h1 {
-        font-family:"bignoodletoo"; 
-        letter-spacing: 2px;
-        text-align:center;
         font-size:60px;
-        margin-top:50px;
+        margin-top:80px;
         /* font-family: Futura, "Trebuchet MS", Arial, sans-serif; */
       }
     
@@ -129,21 +140,15 @@ margin-left:10%;
       }
     
     
-      
-      .button1, .button2{     
-          margin:auto;       
-      }
-    
-    
-    
-    
       body{   
         background-image: url("../../images/background2.jpg");    
       }
       
     .mygroups{
-        margin-bottom:300px;
-        margin-top:100px;      
+        margin-bottom:100px;
+        margin-top:0px;      
     }
+
+   
     
 }
