--- a/client/src/components/DeleteBtn/DeleteBtn.css
+++ b/client/src/components/DeleteBtn/DeleteBtn.css
@@ -4,21 +4,18 @@
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid rgb(207, 206, 206);
-  width:35%;
+  width:80px;
   height:20px;
   font-size:16px;
   margin:10px;
   text-align:center;
- color:rgb(245, 60, 28);
+ color:rgb(255, 0, 0);
  float: right;
 }
 
 .delete-btn:hover {
-  color: #f09731;
-  background-color: rgb(44, 43, 43);
+  color: #f89090;
+
 }
 
-.delete-btn:active { 
-  background-color: #aed3e0;
-  color: #ffffff;
-}
+
