--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -13,25 +13,24 @@ html, body {
  }
  #body {
     padding:10px;
-    padding-bottom:60px;   /* Height of the footer */
+    padding-bottom:100px;  
  }
 
 #Footer{
-    background-color:rgb(24, 23, 23, 0.2);
+    background-color:rgba(44, 43, 43, 0.055);
     text-align:center;
     color:rgb(185, 182, 182); 
-    
-
-    position:absolute;
-   
+    position:absolute; 
    width:100%;
-   height:60px;   /* Height of the footer */
-  
+   height:100px;  
+  font-size:15px;
+  padding-top:20px;
 }
 
 a{
    
     color:rgb(240, 238, 238);
+    margin-top:5px;
 }
 
 a:hover{
@@ -39,35 +38,3 @@ a:hover{
     text-decoration:none;
 }
 
-/* #menu-outer {
-	height: 84px;
-	background: url("") repeat-x;
-}
-
-.table {
-	display: table;   
-	margin: 0 auto;
-}
-
-ul#horizontal-list {
-	min-width: 696px;
-	list-style: none;
-	padding-top: 20px;
-    }
-    
-	ul#horizontal-list li {
-		display: inline;
-    }
-    a{
-        padding:30px;
-        color:rgb(153, 151, 151);
-    }
-
-    a:hover{
-        color:#f09731;
-    }
-
-    body, html { 
-        height:100%;
-        width: 100%;
-    } */
