--- a/client/src/components/ProfileModal/ProfileModal.css
+++ b/client/src/components/ProfileModal/ProfileModal.css
@@ -1,3 +1,5 @@
+
+
 #settings-btn{
     background-color:rgb(250, 142, 0);
     border: none;
@@ -25,6 +27,7 @@ border-radius:4px;
 width:80px;
 color:rgb(19, 163, 62);
 height:30px;
+background-color:rgb(255, 255, 255);
 }
 
 .pmodal-update-btn:hover{
@@ -76,3 +79,6 @@ font-family:"bignoodletoo";
 padding-bottom:5px;
 }
 
+button{
+  border-radius:4px;
+}
