--- a/client/src/pages/MyPage/MyPage.css
+++ b/client/src/pages/MyPage/MyPage.css
@@ -51,7 +51,11 @@ h1 {
     margin-bottom:200px;
 }
 
-
+.card {
+  margin: 0 auto;
+  width: 80%;
+  margin-bottom:50px;
+}
 
 @media only screen and (max-width: 1024px)  {
 
